feat(api): add multi-channel support for ticket monitoring (PT-453)
Allow one bot to monitor several Slack channels, each with its own
track mode (QUERIES, PRS, or BOTH). Adds SlackChannelProps and
SlackChannelRegistry to resolve per-channel behaviour, with the legacy
single channel-id treated as a BOTH channel when channels is empty.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>