@@ -4,8 +4,10 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
 import com.coreeng.supportbot.analysis.ThreadsAwaitingAnalysisRepository.ThreadToAnalyze;
+import com.coreeng.supportbot.config.SlackChannelRegistry;
 import com.coreeng.supportbot.config.SlackTicketsProps;
 import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -18,13 +20,14 @@ class ThreadsAwaitingAnalysisServiceTest {
     @Mock
     private ThreadsAwaitingAnalysisRepository repository;
 
-    private SlackTicketsProps slackTicketsProps;
     private ThreadsAwaitingAnalysisService service;
 
     @BeforeEach
     void setUp() {
-        slackTicketsProps = new SlackTicketsProps("C123456", "eyes", "ticket", "white_check_mark", "rocket");
-        service = new ThreadsAwaitingAnalysisService(repository, slackTicketsProps);
+        SlackTicketsProps slackTicketsProps =
+                new SlackTicketsProps("C123456", List.of(), "eyes", "ticket", "white_check_mark", "rocket");
+        SlackChannelRegistry channelRegistry = new SlackChannelRegistry(slackTicketsProps);
+        service = new ThreadsAwaitingAnalysisService(repository, channelRegistry);
     }
 
     @Test
@@ -32,17 +35,18 @@ class ThreadsAwaitingAnalysisServiceTest {
         // given
         int days = 7;
         String promptId = "prompt-v1.0";
-        ImmutableList<ThreadToAnalyze> expectedThreads =
-                ImmutableList.of(new ThreadToAnalyze(1L, "1234.5678"), new ThreadToAnalyze(2L, "2345.6789"));
+        ImmutableList<ThreadToAnalyze> expectedThreads = ImmutableList.of(
+                new ThreadToAnalyze(1L, "1234.5678", "C123456"), new ThreadToAnalyze(2L, "2345.6789", "C123456"));
 
-        when(repository.findThreadsAwaitingAnalysis(days, promptId, "C123456")).thenReturn(expectedThreads);
+        when(repository.findThreadsAwaitingAnalysis(days, promptId, List.of("C123456")))
+                .thenReturn(expectedThreads);
 
         // when
         ImmutableList<ThreadToAnalyze> result = service.find(days, promptId);
 
         // then
         assertThat(result).isEqualTo(expectedThreads);
-        verify(repository).findThreadsAwaitingAnalysis(days, promptId, "C123456");
+        verify(repository).findThreadsAwaitingAnalysis(days, promptId, List.of("C123456"));
     }
 
     @Test
@@ -50,14 +54,15 @@ class ThreadsAwaitingAnalysisServiceTest {
         // given
         int days = 30;
         String promptId = "prompt-v2.0";
-        when(repository.findThreadsAwaitingAnalysis(days, promptId, "C123456")).thenReturn(ImmutableList.of());
+        when(repository.findThreadsAwaitingAnalysis(days, promptId, List.of("C123456")))
+                .thenReturn(ImmutableList.of());
 
         // when
         ImmutableList<ThreadToAnalyze> result = service.find(days, promptId);
 
         // then
         assertThat(result).isEmpty();
-        verify(repository).findThreadsAwaitingAnalysis(days, promptId, "C123456");
+        verify(repository).findThreadsAwaitingAnalysis(days, promptId, List.of("C123456"));
     }
 
     @Test
@@ -65,13 +70,14 @@ class ThreadsAwaitingAnalysisServiceTest {
         // given
         int days = 14;
         String promptId = "prompt-v3.0";
-        when(repository.findThreadsAwaitingAnalysis(days, promptId, "C123456")).thenReturn(ImmutableList.of());
+        when(repository.findThreadsAwaitingAnalysis(days, promptId, List.of("C123456")))
+                .thenReturn(ImmutableList.of());
 
         // when
         service.find(days, promptId);
 
         // then
-        verify(repository).findThreadsAwaitingAnalysis(days, promptId, "C123456");
+        verify(repository).findThreadsAwaitingAnalysis(days, promptId, List.of("C123456"));
     }
 
     @Test
@@ -81,11 +87,12 @@ class ThreadsAwaitingAnalysisServiceTest {
         String promptId = "prompt-v1.0";
         ImmutableList.Builder<ThreadToAnalyze> builder = ImmutableList.builder();
         for (long i = 1; i <= 100; i++) {
-            builder.add(new ThreadToAnalyze(i, "thread-" + i));
+            builder.add(new ThreadToAnalyze(i, "thread-" + i, "C123456"));
         }
         ImmutableList<ThreadToAnalyze> manyThreads = builder.build();
 
-        when(repository.findThreadsAwaitingAnalysis(days, promptId, "C123456")).thenReturn(manyThreads);
+        when(repository.findThreadsAwaitingAnalysis(days, promptId, List.of("C123456")))
+                .thenReturn(manyThreads);
 
         // when
         ImmutableList<ThreadToAnalyze> result = service.find(days, promptId);
